--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,9 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title><%= content_for?(:title) ? yield(:title) : "foundation-rails" %></title>
+    <title><%= content_for?(:title) ? yield(:title) : "Zurb" %></title>
 
     <%= stylesheet_link_tag    "application" %>
+    <script src="/js/vendor/modernizr.js"></script>
     <%= csrf_meta_tags %>
   </head>
 
@@ -21,10 +22,10 @@
         <li class="has-form">
           <div class="row collapse">
             <div class="large-8 small-9 columns">
-              <input type="text" placeholder="Find Stuff">
+              <input type="text" placeholder="Search here....">
             </div>
             <div class="large-4 small-3 columns">
-              <a href="#" class="alert button expand">Search</a>
+              <a href="#" class="button expand">Search</a>
             </div>
           </div>
         </li>
@@ -32,13 +33,13 @@
       <section class="top-bar-section">
         <ul class="right">
           <li class="divider"></li>
-          <li><%= link_to "Browse Videos", videos_path %></li>
+          <li><%= link_to "Videos", videos_path %></li>
           <li class="divider"></li>
-          <li><%= link_to "Price List" %></li>
+          <li><%= link_to "Gallery", photos_path %></li>
           <li class="divider"></li>
-          <li><%= link_to "Contact Us" %></li>
+          <li><%= link_to "News", socials_path %></li>
           <li class="divider"></li>
-          <li><%= link_to "Cart" %></li>
+          <li><%= link_to "Contact Us", contact_path %></li>
           <li class="divider"></li>
           <% if user_signed_in? %>
             <li class="has-dropdown">
@@ -57,12 +58,13 @@
             </li>
             <li class="divider"></li>
             <li class="has-form">
-              <%= link_to "sign in", new_user_session_path, :class => 'button' %>
+              <%= link_to "Sign in", new_user_session_path, :class => 'button' %>
             </li>
             <% end %>
         </ul>
       </section>
     </nav>
+    <br><br>
     <div class="row">
       <div class="small-12 columns"><%= yield %></div>
     </div>
