--- a/app/views/users/confirmations/new.html.erb
+++ b/app/views/users/confirmations/new.html.erb
@@ -1,12 +1,13 @@
-<h2>Resend confirmation instructions</h2>
+<h1>Resend Confirmation</h1>
 
 <%= form_for(resource, :as => resource_name, :url => confirmation_path(resource_name), :html => { :method => :post }) do |f| %>
-  <%= devise_error_messages! %>
+    <%= devise_error_messages! %>
+    <div class="row">
+		<div class="large-8 columns"><%= f.label :email %><br />
+		<%= f.email_field :email, :autofocus => true %></div>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
-
-  <div><%= f.submit "Resend confirmation instructions" %></div>
+		<div class="large-8 columns"><%= f.submit :class => "tiny button" ,:value => "Resend Confirmation" %></div>
+	</div>
 <% end %>
 
 <%= render "users/shared/links" %>
