--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -1,12 +1,13 @@
 <h2>Forgot your password?</h2>
 
 <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
-  <%= devise_error_messages! %>
+    <%= devise_error_messages! %>
+    <div class="row">
+		<div class="large-8 columns"><%= f.label :email %><br />
+		<%= f.email_field :email, :autofocus => true %></div>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
-
-  <div><%= f.submit "Send me reset password instructions" %></div>
+		<div class="large-8 columns"><%= f.submit :class => "tiny button", :value => "Send me reset password instructions" %></div>
+	</div>
 <% end %>
 
 <%= render "users/shared/links" %>
