--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -2,43 +2,54 @@
 
 <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
   <%= devise_error_messages! %>
+  <div class="row">
+    <div class="large-8 columns"><%= f.label :username %><br />
+    <%= f.text_field :username, :autofocus => true %></div>
 
-  <div><%= f.label :username %><br />
-  <%= f.text_field :username, :autofocus => true %></div>
+    <div class="large-8 columns"><%= f.label :mobileno %><br />
+    <%= f.text_field :mobileno %></div>
 
-  <div><%= f.label :mobileno %><br />
-  <%= f.text_field :mobileno, :autofocus => true %></div>
+    <div class="large-8 columns"><%= f.label :address1 %><br />
+    <%= f.text_field :address1 %></div>
 
-  <div><%= f.label :address1 %><br />
-  <%= f.text_field :address1, :autofocus => true %></div>
+    <div class="large-8 columns"><%= f.label :address2 %><br />
+    <%= f.text_field :address2 %></div>
 
-  <div><%= f.label :address2 %><br />
-  <%= f.text_field :address2, :autofocus => true %></div>
+    <div class="large-8 columns">
+      <label>Gender</label>
+      <input type="radio" name="gender" value="male" id="pokemonRed" <% if current_user.gender == "male" %> checked <% end %> ><label for="pokemonRed">Male</label>
+      <input type="radio" name="gender" value="female" id="pokemonBlue" <% if current_user.gender == "female" %> checked <% end %> ><label for="pokemonBlue">Female</label>
+    </div>
 
-  <div><%= f.input :gender, collection: [ ['M', 'Male' ], ['F', 'Female'] ], as: :radio_buttons, label_method: :last, value_method: :first, checked: @user.gender, item_wrapper_class: 'inline' %>
+    <!-- <div class="large-8 columns"><%= f.input :gender, collection: [ ['M', 'Male' ], ['F', 'Female'] ], as: :radio_buttons, label_method: :last, value_method: :first, checked: @user.gender, item_wrapper_class: 'inline' %>
+    </div> -->
+
+    <div class="large-8 columns"><%= f.label :email %><br />
+    <%= f.email_field :email %></div>
+
+    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+      <div class="large-8 columns">Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+    <% end %>
+
+    <div class="large-8 columns">
+      <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+      <%= f.password_field :password, :autocomplete => "off" %>
+    </div>
+
+    <div class="large-8 columns"><%= f.label :password_confirmation %><br />
+    <%= f.password_field :password_confirmation %></div>
+
+    <div class="large-8 columns"><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
+    <%= f.password_field :current_password %></div>
+
+    <div class="large-8 columns"><%= f.submit :class => "tiny button", :value => "Update" %></div>
+
   </div>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
-
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
-
-  <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-  <%= f.password_field :password, :autocomplete => "off" %></div>
-
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
-
-  <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-  <%= f.password_field :current_password %></div>
-
-  <div><%= f.submit "Update" %></div>
 <% end %>
 
 <h3>Cancel my account</h3>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %></p>
+<p>If You Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete, :class => "tiny button" %></p>
 
 <%= link_to "Back", :back %>
