--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -3,31 +3,39 @@
 <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
   
-  <div><%= f.label :username %><br />
-  <%= f.text_field :username, :autofocus => true %></div>
+  <div class="row">
+    <div class="large-8 columns"><%= f.label :username %><br />
+    <%= f.text_field :username, :autofocus => true %></div>
 
-  <div><%= f.label :mobileno %><br />
-  <%= f.text_field :mobileno, :autofocus => true %></div>
+    <div class="large-8 columns"><%= f.label :mobileno %><br />
+    <%= f.text_field :mobileno %></div>
 
-  <div><%= f.label :address1 %><br />
-  <%= f.text_field :address1, :autofocus => true %></div>
+    <div class="large-8 columns"><%= f.label :address1 %><br />
+    <%= f.text_field :address1 %></div>
 
-  <div><%= f.label :address2 %><br />
-  <%= f.text_field :address2, :autofocus => true %></div>
+    <div class="large-8 columns"><%= f.label :address2 %><br />
+    <%= f.text_field :address2 %></div>
 
-  <div><%= f.input :gender, collection: [ ['M', 'Male' ], ['F', 'Female'] ], as: :radio_buttons, label_method: :last, value_method: :first, checked: @user.gender, item_wrapper_class: 'inline' %>
+    <div class="large-8 columns">
+      <label>Gender</label>
+      <input type="radio" name="gender" value="male" id="pokemonRed" checked ><label for="pokemonRed">Male</label>
+      <input type="radio" name="gender" value="female" id="pokemonBlue"><label for="pokemonBlue">Female</label>
+    </div>
+
+    <!-- <div class="large-8 columns"><%= f.input :gender, collection: [ ['M', 'Male' ], ['F', 'Female'] ], as: :radio_buttons, label_method: :last, value_method: :first, checked: @user.gender, item_wrapper_class: 'inline' %>
+    </div> -->
+
+    <div class="large-8 columns"><%= f.label :email %><br />
+    <%= f.email_field :email %></div>
+
+    <div class="large-8 columns"><%= f.label :password %><br />
+    <%= f.password_field :password %></div>
+
+    <div class="large-8 columns"><%= f.label :password_confirmation %><br />
+    <%= f.password_field :password_confirmation %></div>
+
+    <div class="large-8 columns"><%= f.submit :class => "tiny button" , :value => "Sign-up" %></div>
   </div>
-
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
-
-  <div><%= f.label :password %><br />
-  <%= f.password_field :password %></div>
-
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
-
-  <div><%= f.submit "Sign up" %></div>
 <% end %>
 
 <%= render "users/shared/links" %>
