--- a/app/views/videos/show.html.erb
+++ b/app/views/videos/show.html.erb
@@ -9,7 +9,7 @@
   <b>Source:</b>
   
   <div class="flex-video">
-  	<iframe width="420" height="315" src=<%= @video.source %> frameborder="0" allowfullscreen></iframe>
+  	<iframe src=<%= @video.source %> frameborder="0" allowfullscreen></iframe>
   </div>
 </p>
 
