--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,18 +4,24 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title><%= content_for?(:title) ? yield(:title) : "Zurb" %></title>
+    <title><%= content_for?(:title) ? yield(:title) : "Catchmenow" %></title>
 
     <%= stylesheet_link_tag    "application" %>
+    <%= favicon_link_tag "/assets/favicon.png" %>
     <%= csrf_meta_tags %>
   </head>
 
   <body>
+
+
+
     <nav class="top-bar" data-topbar>
       <ul class="title-area">
         <li class="name">
           <h1><%= link_to "Awesome Site", root_path %></a></h1>
         </li>
+              <li class="toggle-topbar menu-icon"><a href="#"><span>menu</span></a></li>
+
       </ul>
       <ul class="left">
         <li class="has-form">
