--- a/app/views/photos/_form.html.erb
+++ b/app/views/photos/_form.html.erb
@@ -1,11 +1,14 @@
 <%= simple_form_for(@photo) do |f| %>
-  <%= f.error_notification %>
+	<%= f.error_notification %>
 
-  <div class="form-inputs">
-    <%= f.input :name %>
-  </div>
-
-  <div class="form-actions">
-    <%= f.button :submit %>
-  </div>
+	<div class="large-8 columns">
+		<%= f.input :name %>
+	</div>
+	<div class="large-8 columns">
+		<label>Photo</label>
+		<%= f.file_field :image %>
+	</div>
+	<div class="large-8 columns">
+		<%= f.button :submit , :class => "tiny button"%>
+	</div>
 <% end %>
