--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -1,5 +1,6 @@
 <h1>New photo</h1>
 
 <%= render 'form' %>
-
-<%= link_to 'Back', photos_path %>
+<div class="large-8 columns">
+	<%= link_to 'Back', photos_path, :class => "tiny button" %>
+</div>
